--- a/js/desktop.ini
+++ b/js/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-InfoTip=Esta pasta está compartilhada on-line.
+InfoTip=Esta pasta esta compartilhada on-line.
 IconFile=C:\Program Files\Google\Drive\googledrivesync.exe
 IconIndex=16
     
